2009-03-24  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): avoid
	a segfault if invalid ic is given.

2009-03-14  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/compose.c (sequence_lookup): correct masking modifiers.

2009-03-13  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_destroy_ic):
	implemented.

	* backends/xim/compose.c (sequence_add): Override old entry like XKB.
	(sequence_replace): new to discard old entry that has more sequences
	than new one.
	(compose_parse): allow overriding partially duplicated sequences.

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event):
	get rid of an unnecessary synchronization.

2009-03-12  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event):
	Fix an assertion on looking up a sequence.

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event):
	Ignore modifker keys.

	* backends/xim/loopback.c (xim_loopback_real_xim_forward_event): wait
	for a XIM_SYNC_REPLY if it's on going and postpone processing of
	a keyevent.
	(xim_loopback_real_xim_sync_reply): set a timer to restart processing
	of keyevents if there are.
	(_process_keyevent): new.

2009-03-11  Akira TAGOH  <tagoh@redhat.com>

	* backends/xim/compose.c (compose_parse): get rid of NoSymbol warning.
	maybe passed thourgh enough time to estimate. (rhbz#484142)

2009-03-10  Akira TAGOH  <tagoh@redhat.com>

	* applet/main.c (_preference_activated): Fix a warning on free.
	(_create_applet): likewise.

	* configure.ac: bump to 0.106.1.

	* src/monitor.c (imsettings_monitor_get_current_user_im): Fix appearing
	a critical message in g_ascii_strdown().
	(imsettings_monitor_get_current_system_im): likewise.

	* applet/main.c (_create_applet): set a default value.

	* backends/xim/compose.c (compose_parse): Fix a double-free issue. (RHBZ#485595)

2009-03-09  Akira TAGOH  <tagoh@redhat.com>
